--- a/_posts/2012-10-26-cake.md
+++ b/_posts/2012-10-26-cake.md
@@ -1,6 +1,6 @@
 ---
 layout: portfolio_entry
-image: /example/img/football_shirt_cake.jpg
+image: img/football_shirt_cake.jpg
 title: A Cake for Young Footballers
 ---
 A sports themed cake
